--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
              <p>PHARRELLWILLIAMS.COM</p>
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
+             <img src=
         <!-- span text 'COLUMBIARECORDS.COM' -->
-             <p></p>
+             <p>COLUMBIARECORDS.COM</p>
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
