--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
              <p>PHARRELLWILLIAMS.COM</p>
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-             <img src=""
+             <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="columbia-logo">
         <!-- span text 'COLUMBIARECORDS.COM' -->
              <p>COLUMBIARECORDS.COM</p>
         <br>
